--- a/templates/zo2_hallo/assets/zo2/development/less/core/joomla.less
+++ b/templates/zo2_hallo/assets/zo2/development/less/core/joomla.less
@@ -780,7 +780,6 @@ ul.menu li {
 }
 
 .search {
-  float: right;
   #searchForm {
     .inputbox {
       width: 210px;
